# numC

./: Errors.C  Errors.h  Makefile  Makefile.am  Makefile.in  Progress  README  README.md  Utils.C  Utils.h  autoscript.sh  config.h  config.h.in  config.status  configure  configure.ac  configure.scan  libtool  numC.C  numC.h
autom4te.cache/: output.2  requests  traces.0  traces.1  traces.2
doxygen/: doxyfile
doxygen/html/: Matrix_8C.html  Matrix_8C__incl.map  Matrix_8C__incl.md5  Matrix_8C_source.html  Matrix_8h.html  Matrix_8h__dep__incl.map  Matrix_8h__dep__incl.md5  Matrix_8h_source.html  Matrix__gsl_8C.html  Matrix__gsl_8C__incl.map  Matrix__gsl_8C__incl.md5  Matrix__gsl_8C_source.html  Matrix__gsl_8h.html  Matrix__gsl_8h__dep__incl.map  Matrix__gsl_8h__dep__incl.md5  Matrix__gsl_8h__incl.map  Matrix__gsl_8h__incl.md5  Matrix__gsl_8h_source.html  Stats_8C.html  Stats_8C__incl.map  Stats_8C__incl.md5  Stats_8C_source.html  Stats_8h.html  Stats_8h__dep__incl.map  Stats_8h__dep__incl.md5  Stats_8h__incl.map  Stats_8h__incl.md5  Stats_8h_source.html  Utils_8C.html  Utils_8C__incl.map  Utils_8C__incl.md5  Utils_8C_source.html  Utils_8h.html  Utils_8h__dep__incl.map  (+14 more)
examples/: Makefile  README.md  main.C
numC/: .Matrix_gsl.h.swp  Makefile  Makefile.am  Makefile.in  Matrix.C  Matrix.h  Matrix_gsl.C  Matrix_gsl.h  Matrix_gsl.lo  Rand.h  Rand.h.gch  Stats.C  Stats.h  Stats.lo  Utils.C  Utils.h  libnumC.la
numC/.deps/: Matrix.Plo  Matrix.Po  Matrix_gsl.Plo  Matrix_gsl.Po  Stats.Plo  Stats.Po  Utils.Plo  Utils.Po
numC/.libs/: libnumC.la  libnumC.lai  libnumC.so.0.0.0
(+56 files in other folders)
